tests/ValidProofs/conjI.fitch
|P(x)
|P(y)
|---
|P(x) ∧ P(y) (∧I) 1,2