tests/InvalidRules/conjE%2.fitch
|P(x) ∧ Q(x)
|---
|Q(x) (∧E1) 1
